Mon Mar 11 10:21:05 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Add QUESTION variable, analogous to PLUS.  Use it
	instead of \? to match a question mark.

	* cvs.h (CVSMODULE_OPTS, CVSMODULE_SPEC): Move from here...
	* modules.c: ...to here.  They are only used here and the code to
	handle the syntax of modules files should not be scattered all over.
	* modules.c (CVSMODULE_OPTS): Add "+" as first character.
	* sanity.sh (modules): New tests 148a0 and 148a1 test for
	above-fixed bug.

Mon Mar 11 13:11:04 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* modules.c (cat_module): set optind to 0 to force getopt() to
	reinitialize its internal nextchar

Mon Mar 11 00:09:14 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* hash.c (findnode, findnode_fn): Revert changes of 7-8 Mar 1996.
	The correct style is to assert() that key != NULL (see HACKING),
	which is already done in the hashp function.
	* fileattr.c (fileattr_delproc): Likewise, assert() that
	node->data != NULL rather than trying to deal with it being NULL.

Fri Mar  8 01:31:04 1996  Greg A. Woods  <woods@most.weird.com>

	* hash.c (findnode_fn): one more place to avoid calling hashp()
	with a NULL key

Thu Mar  7 17:30:01 1996  Greg A. Woods  <woods@most.weird.com>

	* hash.c (findnode): also return NULL if key is not set
	[[ reported by Chris_Eich@optilink.optilink.dsccc.com, and
	supposedly in a PR that should be marked "fixed"..... ]]

	* fileattr.c (fileattr_set): set node->data to NULL after freeing
	it to prevent subsequent accesses
	(fileattr_delproc): don't free node->data if it's NULL, and set it
	to NULL after freeing
	[[ reported by Chris_Eich@optilink.optilink.dsccc.com, and
	supposedly in a PR that should be marked "fixed"..... ]]

Fri Mar  1 14:56:08 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basica): New test basica-4a tests for bug fixed by
	sam@inf.enst.fr on 1 Mar 96.

Fri Mar  1 18:10:49 1996  Samuel Tardieu  <sam@inf.enst.fr>
